desktop layout and stying done

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -25,7 +25,13 @@
 //smartphones
 @include mediaSm {
 
-    
+   main{
+       .container{
+        .row{
+            flex-direction: column;  
+        }
+       }
+   } 
     
 
 }
