--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,82 @@ body{
 main {
     padding: 4rem;
     height: 100%;
+    text-align: center;
+    .container {
+        display: inline-flex;
+        flex-direction: column;
+        height: 100%;
+        margin: -10px;
+
+        .row{
+            display: flex;
+            flex-direction: row;
+            height: 100%;
+            justify-content: center;
+
+            .column-left{
+                display: inline-block;
+                text-align: right;
+                width: 40%;
+                padding: 5px;
+                vertical-align: top;
+               
+            }
+            
+             .column-right{
+                 //flex-grow: 2;
+                 display: inline-block;
+                 text-align: left;
+                 width: 48%;
+                 vertical-align: middle;
+
+                 .input{
+                    height: 20px;
+                        width: 280px;
+                        padding: 5px;
+                        margin: 10px;
+                        border: 0px solid black;
+                        border-bottom: 1px solid white;
+                        background-color: $primary-color;
+                        
+                        
+                         
+                 }
+                 .dropdown {
+                    height: 35px;
+                    width: 140px;
+                    padding: 5px;
+                    margin: 10px;  
+                    margin-top: 15px;
+                    border: 0px solid #c0c0c0;
+                    border-bottom: 1px solid white;
+                   
+                    background-color: $primary-color;
+                  }
+
+                  .radio, .checkbox {
+                    position: relative;
+                    left: -43px;
+                    margin-left: 10px;
+                    display: block;
+                    padding-bottom: 10px;
+                    
+                  }
+                  textarea{
+                      background-color:$primary-color;
+                      border: 1px solid white;
+                  }
+             }
+
+             
+        }
+        .row>*{
+            margin: 10px 10px 10px 10px;
+        }
+    }        
 }
 
-
+ 
 @import 'mobile';
+ 
+ 
